--- a/style.css
+++ b/style.css
@@ -7,19 +7,44 @@
         display:block !important;
     }
     
+    h3 {
+        position:relative;
+    }
+    h3 button {
+        position:absolute;
+        top:0em;
+        right:0em
+    }
+
     /* adjust the margins of aside section for different screen size  */
     @media screen and (min-width: 1200px){
+        /* main{
+            padding-top:20px;
+        } */
+
+        aside>div:not(:first-child) {
+            margin-top:1rem
+        }
+
+    }
+
+    @media screen and (max-width: 639px){
         aside>div:not(:first-child) {
             margin-top:1rem
         }
     }
 
-    @media screen and (min-width: 960px) and (max-width: 1199px) {
+    @media screen and (min-width: 640px) and (max-width: 1199px) {
         aside>div:not(:first-child) {
             margin-left:1.5rem
         }
     } 
 
+    
+
+    .a{
+        border:red 1px solid;
+    }
 
 /* added by John  */
 
