--- a/style.css
+++ b/style.css
@@ -1,183 +1,177 @@
-/*added by Mila  */
-/* header button CSS */
-
-
 body {
-    background-color: #f7f8fa;
-}
-
-#authorization-btns {
-    margin-left: 20px !important;
-    padding: 0px;
-}
-
-#authorization-btns button {
-    border: none !important;
-    font-size: 1rem;
-    margin-top: 55px !important;
-    color: white !important
-}
-
-#to-do-list .uk-card,
-#finished-list .uk-card {
-    margin-bottom: 15px !important;
-}
-
-#to-do-list div p,
-#finished-list div p {
-    margin: 0px 5px !important;
-}
-
-#to-do-count,
-#finished-count {
-    margin: 0px 5px !important;
-    font-size: 0.7rem !important;
-    height: 18px !important;
-    min-width: 18px;
+  background-color: #fafbfd;
 }
 
 header {
-    padding: 10px 0px !important;
-    background-color: #5d80b6 !important;
-
+  padding: 10px 0px !important;
+  background-color: #5d80b6 !important;
 }
 
 h1,
 h3 {
-
-    font-family: 'Bitter', serif !important;
+  font-family: "Bitter", serif !important;
 }
 
 h1 {
-    color: white!important;
+  color: white !important;
 }
 
-aside>div {
-    padding-top: 30px !important;
-    padding-bottom: 20px !important;
-}
-
-#weather-div button {
-    padding: 0px 10px !important;
-    min-height: 25px !important;
-}
-
+/* make the cards and input boxes rounded  */
 .uk-card,
 .rounded {
-    border-radius: 15px !important;
+  border-radius: 15px !important;
 }
 
-main {
-    font-size: 1.1rem;
+/* adjust sign-in , sign-out button location in the header  */
+#authorization-btns {
+  margin-left: 20px !important;
+  padding: 0px;
 }
 
-main>div {
-    padding: 16px 0px !important;
-}
-
-aside {
-    margin-right: 20px !important;
-    padding-left: 0px !important;
+#authorization-btns button {
+  border: none !important;
+  font-size: 1rem;
+  margin-top: 55px !important;
+  color: white !important;
 }
 
 .uk-grid {
-    margin-left: 0px;
+  margin-left: 0px;
 }
 
-#button-card {
-    margin-top: 10px !important;
+main {
+  font-size: 1.1rem;
 }
 
-.iconStyle {
-    margin-top: -3px;
-}
-
-/* schedule section CSS */
-.uk-tab:first-child {
-    padding-left: 0.5rem;
-}
-
-.uk-position-small {
-    margin-top: 17px !important;
+main > div {
+  padding: 16px 0px !important;
 }
 
 /* seems like UIkit has a bug with position relative, works well if it is covered with a border  */
 .invisible-border {
-    border: #FCF6F5FF 0.1px solid;
+  border: #fafbfd 0.1px solid;
+}
+
+.uk-tab:first-child {
+  padding-left: 0.5rem;
+}
+
+.uk-position-small {
+  margin-top: 17px !important;
+}
+
+/* adjust to-do list and finished list  */
+#to-do-list .uk-card,
+#finished-list .uk-card {
+  margin-bottom: 15px !important;
+}
+
+#to-do-list div p,
+#finished-list div p {
+  margin: 0px 5px !important;
+}
+
+#to-do-count,
+#finished-count {
+  margin: 0px 5px !important;
+  font-size: 0.7rem !important;
+  height: 18px !important;
+  min-width: 18px;
+}
+
+/* adjust aside section border-box  */
+aside {
+  margin-right: 20px !important;
+  padding-left: 0px !important;
+}
+
+aside > div {
+  padding-top: 30px !important;
+  padding-bottom: 20px !important;
+}
+
+/* adjust weather sections border-box  */
+#weather-div button {
+  padding: 0px 10px !important;
+  min-height: 25px !important;
+}
+
+#button-card {
+  margin-top: 10px !important;
+}
+
+/* adjust news section border-box  */
+.news {
+  display: block;
+}
+
+.iconStyle {
+  margin-top: -3px;
 }
 
 /* adjust the margins of aside section for different screen size  */
 @media screen and (min-width: 1200px) {
-    aside>div:not(:first-child) {
-        margin-top: 1rem;
-    }
+  aside > div:not(:first-child) {
+    margin-top: 1rem;
+  }
 
-    .uk-padding {
-        padding: 1rem 2rem;
-    }
+  .uk-padding {
+    padding: 1rem 2rem;
+  }
 
-    main {
-        padding: 0px 40px 0px 20px !important;
-    }
-}
-
-@media screen and (max-width: 639px) {
-    aside>div:not(:first-child) {
-        margin-top: 1rem;
-    }
-
-    .uk-grid-match.uk-grid-small {
-        margin-left: 0px !important;
-    }
-
-    main {
-        margin-top: 20px !important;
-        min-height: 400px;
-    }
-
-    aside {
-        margin-right: 0px !important
-    }
-
-    main,
-    aside {
-        padding: 1px !important;
-    }
-
-    main>div {
-        padding: 10px 0px !important;
-    }
-
-    #authorization-btns {
-        max-width: 30px;
-    }
+  main {
+    padding: 0px 40px 0px 20px !important;
+  }
 }
 
 @media screen and (min-width: 640px) and (max-width: 1199px) {
+  aside,
+  main {
+    margin: 5px 20px !important;
+    padding: 0px !important;
+  }
 
-    aside,
-    main {
-        margin: 5px 20px !important;
-        padding: 0px !important
-    }
+  aside > div {
+    margin-bottom: 0px !important;
+  }
 
-    aside>div {
-        margin-bottom: 0px !important
-    }
+  aside > div:not(:first-child) {
+    margin-left: 1.5rem;
+  }
 
-    aside>div:not(:first-child) {
-        margin-left: 1.5rem;
-    }
-
-    aside>div.uk-card {
-        padding-top: 50px !important;
-    }
+  aside > div.uk-card {
+    padding-top: 50px !important;
+  }
 }
 
-/* added by John  */
+@media screen and (max-width: 639px) {
+  aside > div:not(:first-child) {
+    margin-top: 1rem;
+  }
 
-.news {
-    display: block;
+  .uk-grid-match.uk-grid-small {
+    margin-left: 0px !important;
+  }
+
+  main {
+    margin-top: 20px !important;
+    min-height: 400px;
+  }
+
+  aside {
+    margin-right: 0px !important;
+  }
+
+  main,
+  aside {
+    padding: 1px !important;
+  }
+
+  main > div {
+    padding: 10px 0px !important;
+  }
+
+  #authorization-btns {
+    max-width: 30px;
+  }
 }
-
-/* added by Kephane */
